--- a/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
+++ b/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
@@ -16,19 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "a = 12\n",
+    "a = 5\n",
     "print(a)"
    ]
   },
@@ -41,22 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
     }
    ],
    "source": [
-    "type(8.5)"
+    "print(type(8.5))"
    ]
   },
   {
@@ -68,22 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
     }
    ],
    "source": [
-    "type(a)"
+    "print(type(a))"
    ]
   },
   {
@@ -95,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_nombre = 'juan carlos perez'"
+    "nombre = \"Rudy\""
    ]
   },
   {
@@ -111,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_complejo = 5 + 5j"
+    "complejo = 3+4j"
    ]
   },
   {
@@ -127,22 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "complex"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'complex'>\n"
+     ]
     }
    ],
    "source": [
-    "type(n_complejo)"
+    "print(type(complejo))"
    ]
   },
   {
@@ -154,11 +145,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "pi = 3.1416"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1416\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(pi,4))"
    ]
   },
   {
@@ -174,8 +182,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var1 = 'True'\n",
-    "var2 = True"
+    "V1 = \"True\"\n",
+    "V2 = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(V1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(V2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ej1 = \"3,5\"\n",
+    "ej2 = 2.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(float(ej1.replace(\",\",\".\"))+ej2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ej1 = float(ej1.replace(\",\",\".\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ej1 + ej2)"
    ]
   },
   {
@@ -187,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +294,7 @@
     }
    ],
    "source": [
-    "print('La variable 1 es de tipo ', type(var1), ' y la variable 2 es de tipo ', type(var2))"
+    "print(\"La variable 1 es de tipo \", type(V1), \" y la variable 2 es de tipo \", type(V2))"
    ]
   },
   {
@@ -211,11 +306,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.5\n"
+     ]
+    }
+   ],
    "source": [
-    "a = 5.2 + 4"
+    "entero = 5 \n",
+    "decimal = 3.5\n",
+    "print(entero+decimal)"
    ]
   },
   {
@@ -227,21 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4+4j)\n"
+      "(7+12j)\n"
      ]
     }
    ],
    "source": [
-    "a = 3 + 1j\n",
-    "b = 1 + 3j\n",
-    "print(a + b)"
+    "x = 5+4j\n",
+    "y = 2+8j\n",
+    "print(x+y)"
    ]
   },
   {
@@ -253,20 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4.61+1j)\n"
+      "(10+4j)\n"
      ]
     }
    ],
    "source": [
-    "c = a + 1.61\n",
-    "print(c)"
+    "m = 5\n",
+    "print(m+x)"
    ]
   },
   {
@@ -278,19 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "40\n"
      ]
     }
    ],
    "source": [
-    "print(3 * 2)"
+    "print(5*8)"
    ]
   },
   {
@@ -302,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -338,8 +443,8 @@
     }
    ],
    "source": [
-    "a = 27 / 4\n",
-    "print(a)"
+    "c = 27/4\n",
+    "print(c)"
    ]
   },
   {
@@ -351,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +468,7 @@
     }
    ],
    "source": [
-    "print(27 // 4)"
+    "print(27//4)"
    ]
   },
   {
@@ -375,22 +480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "27 % 4"
+    "print(27%4)"
    ]
   },
   {
@@ -402,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -411,13 +513,13 @@
        "27"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "6 * 4 + 3"
+    "6*4+3"
    ]
   },
   {
@@ -429,21 +531,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Buenos Aires\n"
+      "Rudy estudia Programación\n"
      ]
     }
    ],
    "source": [
-    "var1 = 'Buenos '\n",
-    "var2 = 'Aires'\n",
-    "print(var1 + var2)"
+    "a1= \"Rudy \"\n",
+    "a2 = \"estudia \"\n",
+    "a3 = \"Programación\"\n",
+    "print(a1+a2+a3)\n"
    ]
   },
   {
@@ -455,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -464,13 +567,15 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 == '2'"
+    "X = 2\n",
+    "Y = \"2\"\n",
+    "X == Y"
    ]
   },
   {
@@ -482,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -491,13 +596,13 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2 == int('2')"
+    "X == int(Y)"
    ]
   },
   {
@@ -509,23 +614,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '3,8'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17308/3442311956.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'3,8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: '3,8'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8\n"
      ]
     }
    ],
    "source": [
-    "a = float('3,8')"
+    "a = float(\"3,8\".replace(\",\",\".\"))\n",
+    "print(a)"
    ]
   },
   {
@@ -537,21 +639,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-4\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "a = -3\n",
-    "a -= 1\n",
-    "print(a)"
+    "var = 4\n",
+    "var -= 3\n",
+    "print(var)"
    ]
   },
   {
@@ -563,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -572,13 +674,71 @@
        "4"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "1 << 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1*(2**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "800"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100 << 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "800"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100*(2**3)"
    ]
   },
   {
@@ -590,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -600,73 +760,40 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17308/1287754560.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m2\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'2'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\Python-Prep\\02 - Variables y Tipos de Datos\\Prep_Course_Homework_02-Resuelto Clase.ipynb Celda 62\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/Python-Prep/02%20-%20Variables%20y%20Tipos%20de%20Datos/Prep_Course_Homework_02-Resuelto%20Clase.ipynb#Y113sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m2\u001b[39;49m \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m\"\u001b[39;49m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
    ],
    "source": [
-    "2 + '2'"
+    "2 + \"2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "float(2) + float('2')"
+    "float(2) + float(\"2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "int(2) + int('2')"
+    "int(2) + int(\"2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'22'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "str(2) + str('2')"
+    "str(2) + str(\"2\")"
    ]
   },
   {
@@ -678,30 +805,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "este texto se repite este texto se repite este texto se repite 3 veces\n"
+      "Este texto se repite Este texto se repite Este texto se repite \n"
      ]
     }
    ],
    "source": [
-    "var1 = 'este texto se repite '\n",
-    "var2 = 3\n",
-    "print(var1 * var2 + str(var2) + ' veces')"
+    "b1 = \"Este texto se repite \"\n",
+    "b2 = 3\n",
+    "print(b1*b2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10  es mayor que cero\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "if (n>0):\n",
+    "    print(n, \" es mayor que cero\")\n",
+    "elif (n<0):\n",
+    "    print(n, \" es menor que cero\")\n",
+    "else:\n",
+    "    print(n, \" es igual a cero\")"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -715,7 +862,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "172ab8dca251a6529b2608b95fe911dc586a1e25d136ba81c34512343e690f23"
+   }
   }
  },
  "nbformat": 4,
