--- a/03 - Flujos de Control/Prep_Course_Homework_03-Resuelto.ipynb
+++ b/03 - Flujos de Control/Prep_Course_Homework_03-Resuelto.ipynb
@@ -179,7 +179,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial es  120\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable = 5\n",
+    "if(type(variable)==int):\n",
+    "    if(variable>0):\n",
+    "        factorial = variable\n",
+    "        while(variable>1):\n",
+    "            variable = variable - 1\n",
+    "            factorial = factorial*variable\n",
+    "        print(\"El factorial es \",factorial)\n",
+    "    else:\n",
+    "        print(\"La variable no es mayor que cero\")\n",
+    "else:\n",
+    "    print(\"La variable no es un entero\")   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +225,7 @@
     "        factorial = n\n",
     "        while (n > 2):\n",
     "            n = n - 1\n",
-    "            factorial = factorial * n\n",
+    "            factorial = factorial * n \n",
     "        print('El factorial es', factorial)\n",
     "    else:\n",
     "        print('La variable no es mayor a cero')\n",
@@ -215,7 +243,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ciclo while número  2\n",
+      "ciclo for numero  1\n",
+      "Ciclo while número  3\n",
+      "ciclo for numero  1\n",
+      "Ciclo while número  3\n",
+      "ciclo for numero  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while(x < 3):\n",
+    "    x += 1\n",
+    "    for i in range (1,x):\n",
+    "        print(\"Ciclo while número \", str(x))\n",
+    "        print(\"ciclo for numero \",str(i))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = 8\n",
+    "for i in range(1,var):\n",
+    "    while(var < 8):\n",
+    "        var -= 1\n",
+    "        print(\"Ciclo While numero\",str(var))\n",
+    "        print(\"Ciclo for numero\", str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +354,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(0,31):\n",
+    "    primo = True\n",
+    "    for i in range(2,x):\n",
+    "        if (x%i==0):\n",
+    "            primo = False\n",
+    "    if(primo==True):\n",
+    "        print(x)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +434,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "135\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_ciclos = 0\n",
+    "for x in range(0,31):\n",
+    "    primo = True\n",
+    "    for i in range(2,x):\n",
+    "        numero_ciclos+=1\n",
+    "        if (x%i==0):\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if(primo==True):\n",
+    "        print(x)\n",
+    "print(numero_ciclos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +515,15 @@
    "metadata": {},
    "source": [
     "11) En los puntos 9 y 10, se diseño un código que encuentra números primos y además se lo optimizó. ¿Es posible saber en qué medida se optimizó?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"se usaron menos ciclos\""
    ]
   },
   {
@@ -466,6 +618,15 @@
    "metadata": {},
    "source": [
     "12) Si la cantidad de números que se evalúa es mayor a treinta, esa optimización crece?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Sí\""
    ]
   },
   {
@@ -595,7 +756,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "120\n",
+      "132\n",
+      "144\n",
+      "156\n",
+      "168\n",
+      "180\n",
+      "192\n",
+      "204\n",
+      "216\n",
+      "228\n",
+      "240\n",
+      "252\n",
+      "264\n",
+      "276\n",
+      "288\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 99\n",
+    "while (n<=300):\n",
+    "    n+=1\n",
+    "    if(n%12==0):\n",
+    "        print(n)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +838,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"Ingrese el valor\")\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "¿Desea buscar el siguiente numero primo?\n",
+      "1\n",
+      "¿Desea buscar el siguiente numero primo?\n",
+      "2\n",
+      "¿Desea buscar el siguiente numero primo?\n",
+      "3\n",
+      "¿Desea buscar el siguiente numero primo?\n",
+      "5\n",
+      "¿Desea buscar el siguiente numero primo?\n",
+      "7\n",
+      "¿Desea buscar el siguiente numero primo?\n"
+     ]
+    }
+   ],
+   "source": [
+    "si = 1\n",
+    "for x in range(0,31):\n",
+    "    primo = True\n",
+    "    for i in range(2,x):\n",
+    "        if (x%i==0):\n",
+    "            primo = False\n",
+    "            break\n",
+    "    if(primo==True):\n",
+    "        print(x)\n",
+    "        print(\"¿Desea buscar el siguiente numero primo?\")\n",
+    "        if(input()!=\"1\"):\n",
+    "            break\n",
+    "    else:\n",
+    "        primo==True\n",
+    "    x+=1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -654,12 +912,6 @@
       "3\n",
       "¿Desea encontrar el siguiente número primo?\n",
       "5\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "7\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "11\n",
-      "¿Desea encontrar el siguiente número primo?\n",
-      "13\n",
       "¿Desea encontrar el siguiente número primo?\n",
       "Se finaliza el proceso\n"
      ]
@@ -694,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -711,16 +963,14 @@
     "    if (n % 6 == 0):\n",
     "        print('El número es: ', str(n))\n",
     "        break\n",
-    "    n += 1"
+    "    else:\n",
+    "        n += 1"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -734,7 +984,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "172ab8dca251a6529b2608b95fe911dc586a1e25d136ba81c34512343e690f23"
+   }
   }
  },
  "nbformat": 4,
