--- a/04 - Estructuras de datos/Prep_Course_Homework_04-Resuelto.ipynb
+++ b/04 - Estructuras de datos/Prep_Course_Homework_04-Resuelto.ipynb
@@ -16,7 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Bogota', 'Montevideo', 'Buenos Aires', 'Quito', 'Caracas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cities = [\"Lima\",\"Bogota\",\"Montevideo\",\"Buenos Aires\",\"Quito\",\"Caracas\"]\n",
+    "print(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -37,6 +55,23 @@
    "metadata": {},
    "source": [
     "2) Imprimir por pantalla el segundo elemento de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bogota\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[1])"
    ]
   },
   {
@@ -65,6 +100,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bogota', 'Montevideo', 'Buenos Aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -85,6 +137,23 @@
    "metadata": {},
    "source": [
     "4) Visualizar el tipo de dato de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(cities))"
    ]
   },
   {
@@ -113,6 +182,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Montevideo', 'Buenos Aires', 'Quito', 'Caracas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -133,6 +219,23 @@
    "metadata": {},
    "source": [
     "6) Visualizar los primeros 4 elementos de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Bogota', 'Montevideo', 'Buenos Aires']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities[:4])"
    ]
   },
   {
@@ -162,6 +265,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.append(\"Asuncion\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Bogota', 'Montevideo', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities.append(\"Lima\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -180,14 +326,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Buenos Aires', 'Brasilia', 'Asunción', 'Montevideo', 'Santiago', 'Lima', 'Caracas', 'Bogotá', 'Ciudad de Méjico', 'Montevideo']\n"
+     "ename": "NameError",
+     "evalue": "name 'lis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Celda 26\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(lis)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'lis' is not defined"
      ]
     }
    ],
@@ -200,6 +350,32 @@
    "metadata": {},
    "source": [
     "8) Agregar otra ciudad, pero en la cuarta posición"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities.insert(3,\"Brasilia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Bogota', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
    ]
   },
   {
@@ -237,6 +413,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = [\"Peru\",\"Colombia\",\"Mexico\",\"Chile\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities.extend(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Bogota', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Colombia', 'Mexico', 'Chile']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -258,6 +469,23 @@
    "metadata": {},
    "source": [
     "10) Encontrar el índice de la ciudad que en el punto 7 agregamos duplicada. ¿Se nota alguna particularidad?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.index(\"Asuncion\"))"
    ]
   },
   {
@@ -286,6 +514,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'Dinamarca' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Celda 41\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y141sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(cities\u001b[39m.\u001b[39;49mindex(\u001b[39m\"\u001b[39;49m\u001b[39mDinamarca\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
+      "\u001b[1;31mValueError\u001b[0m: 'Dinamarca' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.index(\"Dinamarca\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -310,6 +559,40 @@
    "metadata": {},
    "source": [
     "12) Eliminar un elemento de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities.remove(\"Bogota\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Colombia', 'Mexico', 'Chile']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
    ]
   },
   {
@@ -347,6 +630,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ESTEFANY\\OneDrive\\Escritorio\\Python-Prep\\04 - Estructuras de datos\\Prep_Course_Homework_04-Resuelto.ipynb Celda 49\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ESTEFANY/OneDrive/Escritorio/Python-Prep/04%20-%20Estructuras%20de%20datos/Prep_Course_Homework_04-Resuelto.ipynb#Y144sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m cities\u001b[39m.\u001b[39;49mremove(\u001b[39m\"\u001b[39;49m\u001b[39mDinamarca\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "cities.remove(\"Dinamarca\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Colombia', 'Mexico', 'Chile']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -371,6 +692,48 @@
    "metadata": {},
    "source": [
     "14) Extraer el úlimo elemento de la lista, guardarlo en una variable e imprimirlo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colombia\n"
+     ]
+    }
+   ],
+   "source": [
+    "ultimo = cities.pop()\n",
+    "print(ultimo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities)"
    ]
   },
   {
@@ -400,6 +763,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru', 'Lima', 'Montevideo', 'Brasilia', 'Buenos Aires', 'Quito', 'Caracas', 'Asuncion', 'Asuncion', 'Lima', 'Peru']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cities*4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -420,6 +800,76 @@
    "metadata": {},
    "source": [
     "16) Crear una tupla que contenga los números enteros del 1 al 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(1,20)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li = list(range(1,21))\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tupla = tuple(li)\n",
+    "print(tupla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(tupla))"
    ]
   },
   {
@@ -451,6 +901,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 12, 13, 14, 15, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tupla[10:16])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -471,6 +938,40 @@
    "metadata": {},
    "source": [
     "18) Evaluar si los números 20 y 30 están dentro de la tupla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(20 in tupla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(30 in tupla)"
    ]
   },
   {
@@ -501,7 +1002,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se agrega nada\n"
+     ]
+    }
+   ],
+   "source": [
+    "nuevo = \"Paris\"\n",
+    "if (nuevo in cities == False):\n",
+    "    cities.append(nuevo)\n",
+    "    print(\"Se agrega el elemeno paris que no existía\")\n",
+    "else:\n",
+    "    print(\"No se agrega nada\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +1049,23 @@
    "metadata": {},
    "source": [
     "20) Mostrar la cantidad de veces que se encuentra un elemento específico dentro de la tupla y de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tupla.count(2))"
    ]
   },
   {
@@ -556,6 +1096,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new = list(tupla)\n",
+    "print(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [
@@ -577,6 +1135,28 @@
    "metadata": {},
    "source": [
     "22) Desempaquetar solo los primeros 3 elementos de la tupla en 3 variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1,var2,var3,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_,_, = tupla\n",
+    "print(var1)\n",
+    "print(var2)\n",
+    "print(var3)"
    ]
   },
   {
@@ -610,7 +1190,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diccio = {\n",
+    "    \"ciudad\":cities,\n",
+    "    \"continentes\":[\"America\",\"Europa\",\"Asia\"],\n",
+    "    \"paises\":countries,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ciudad': ['Lima', 'Bogota', 'Montevideo', 'Buenos Aires', 'Quito', 'Caracas', 'Paris'], 'continentes': ['America', 'Europa', 'Asia'], 'paises': ['Peru', 'Colombia', 'Mexico', 'Chile']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diccio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,6 +1255,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['ciudad', 'continentes', 'paises'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diccio.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -669,6 +1296,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([['Lima', 'Bogota', 'Montevideo', 'Buenos Aires', 'Quito', 'Caracas', 'Paris'], ['America', 'Europa', 'Asia'], ['Peru', 'Colombia', 'Mexico', 'Chile']])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diccio.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [
@@ -686,11 +1330,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -704,7 +1345,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "172ab8dca251a6529b2608b95fe911dc586a1e25d136ba81c34512343e690f23"
+   }
   }
  },
  "nbformat": 4,
