--- a/06 - Funciones/Prep_Course_Homework_06-Resuelto.ipynb
+++ b/06 - Funciones/Prep_Course_Homework_06-Resuelto.ipynb
@@ -16,6 +16,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def primo(x):\n",
+    "    valor = True\n",
+    "    for i in range(2,x-1):\n",
+    "        if(x%i==0):\n",
+    "            valor = False\n",
+    "            break\n",
+    "    return valor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "primo(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -34,6 +69,39 @@
    "metadata": {},
    "source": [
     "2) Utilizando la función del punto 1, realizar otra función que reciba de parámetro una lista de números y devuelva sólo aquellos que son primos en otra lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listilla(lista):\n",
+    "    listilla =[]\n",
+    "    for i in lista:\n",
+    "        if(primo(i)==True):\n",
+    "            listilla.append(i)\n",
+    "    return listilla    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 7, 11, 13, 17, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lis_completa = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "primos = listilla(lis_completa)\n",
+    "print(primos)"
    ]
   },
   {
@@ -77,6 +145,44 @@
    "metadata": {},
    "source": [
     "3) Crear una función que al recibir una lista de números, devuelva el que más se repite y cuántas veces lo hace. Si hay más de un \"más repetido\", que devuelva cualquiera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repetilon(lista):\n",
+    "    repeticiones=0\n",
+    "    num=0\n",
+    "    for i in lista:\n",
+    "        contador = lista.count(i)\n",
+    "        if(contador>repeticiones):\n",
+    "            repeticiones=contador\n",
+    "            num=i\n",
+    "    return num, repeticiones       \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 6)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repetilon([4,4,4,4,4,4,3,2,5,7,7,7,7,7,7])"
    ]
   },
   {
@@ -130,6 +236,56 @@
    "metadata": {},
    "source": [
     "4) A la función del punto 3, agregar un parámetro más, que permita elegir si se requiere el menor o el mayor de los mas repetidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def repeticua(lista,menor):\n",
+    "    if(menor):\n",
+    "        lista.sort()\n",
+    "        repeticiones=0\n",
+    "        num=0\n",
+    "        for i in lista:\n",
+    "            contador = lista.count(i)\n",
+    "            if(contador>repeticiones):\n",
+    "                repeticiones=contador\n",
+    "                num=i\n",
+    "        return num, repeticiones \n",
+    "    else:\n",
+    "        lista.sort(reverse=True)\n",
+    "        repeticiones=0\n",
+    "        num=0\n",
+    "        for i in lista:\n",
+    "            contador = lista.count(i)\n",
+    "            if(contador>repeticiones):\n",
+    "                repeticiones=contador\n",
+    "                num=i\n",
+    "        return num, repeticiones\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 3)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repeticua([10,1,5,6,8,10,22,5,6,4,11,10,9,5],True)"
    ]
   },
   {
@@ -332,6 +488,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factoria(x):\n",
+    "    if(type(x)!=int):\n",
+    "        return(\"El numero debe ser un entero\")\n",
+    "    if(x<0):\n",
+    "        return(\"El numero debe ser positivo\")\n",
+    "    if(x>1):\n",
+    "        x=x*factoria(x-1)\n",
+    "    return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factoria(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
@@ -363,11 +552,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +567,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "172ab8dca251a6529b2608b95fe911dc586a1e25d136ba81c34512343e690f23"
+   }
   }
  },
  "nbformat": 4,
