--- a/07 - Classes & OOP/Prep_Course_Homework_07-Resuelto.ipynb
+++ b/07 - Classes & OOP/Prep_Course_Homework_07-Resuelto.ipynb
@@ -19,6 +19,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vehículo():\n",
+    "    def __init__(self,color,tipo,cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo = tipo\n",
+    "        self.cilindrada = cilindrada"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -38,6 +51,27 @@
     "Acelerar<br>\n",
     "Frenar<br>\n",
     "Doblar<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Vehiculo:\n",
+    "    def __init__(self, color, tipo, cilindrada):\n",
+    "        self.color = color\n",
+    "        self.tipo = tipo\n",
+    "        self.cilindrada = cilindrada\n",
+    "        self.velocidad = 0\n",
+    "        self.angulo = 0\n",
+    "    def Acelerar(self,vel):\n",
+    "        self.velocidad+=vel\n",
+    "    def Frenar(self,vel):\n",
+    "        self.velocidad-=vel\n",
+    "    def Doblar(self, angulo):\n",
+    "        self.angulo+=angulo"
    ]
   },
   {
